# twitchcat-rust

./: .gitignore  Cargo.toml  README  README.md  post-file.txt
src/: bot.rs  main.rs
src/bot/: mod.rs
src/config/: mod.rs
src/controller/: mod.rs
