[package]
name = "twitchcat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
twitchchat = { version = "0.14.8", features = ["smol", "async"] }
async-io = { version = "1.13.0" }
smol = "1.3.0"
rand = "0.8.5"
