[package]
name = "twitchcat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
twitchchat = { version = "0.14.8", features = ["smol", "async", "async-tls"] }
async-io = { version = "1.13.0" }
smol = "1.3.0"
rand = "0.8.5"
timer = "0.2.0"
chrono = "0.4.24"
serde_yaml = "0.9.21"
serde = { version = "1.0.160", features = ["derive"] }
config-rs = "0.1.3"
log = "0.4.17"
env_logger = "0.10.0"
twitch_api = { version = "0.7.0-rc.4", features = ["helix", "reqwest"] }
reqwest = "0.11.17"
