[package]
name = "twitchcat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["src/bot/*", "src/config/*", "src/controller/*"]

[dependencies]
anyhow = "1.0"
twitchchat = { version = "0.14.8", features = ["smol", "async", "async-tls"] }
async-io = { version = "1.13.0" }
smol = "1.3.0"
rand = { version = "0.8.5", features = ["std"] }
timer = "0.2.0"
chrono = { version = "0.4.24", features = ["serde"] }
serde_yaml = "0.9.21"
serde = { version = "1.0.160", features = ["derive"] }
config-rs = "0.1.3"
log = "0.4.17"
env_logger = "0.10.0"
bpaf = { version = "0.7.10", features = ["derive"] }
